--- a/src/main/res/layout/layer_row_layout.xml
+++ b/src/main/res/layout/layer_row_layout.xml
@@ -21,13 +21,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight">
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    >
 
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="48dip"
         android:layout_height="48dip"
-        android:layout_marginRight="5dip"/>
+        android:layout_marginRight="5dip"
+        />
 
     <TextView
         android:id="@+id/tvLayerName"
@@ -36,14 +38,16 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:ellipsize="marquee"/>
+        android:ellipsize="marquee"
+        />
 
     <ImageButton
         android:id="@+id/btShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="7dip" />
+        android:layout_margin="7dip"
+        />
 
     <ImageButton
         android:id="@+id/btSettings"
@@ -51,7 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="7dip"
-        android:background="@drawable/ic_action_settings" />
+        android:background="@drawable/ic_action_settings"
+        />
 
     <ImageButton
         android:id="@+id/btDelete"
@@ -59,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="7dip"
-        android:background="@drawable/ic_action_delete" />
+        android:background="@drawable/ic_action_delete"
+        />
 
 </LinearLayout>
