--- a/src/main/res/layout/layer_row_layout.xml
+++ b/src/main/res/layout/layer_row_layout.xml
@@ -26,9 +26,10 @@
 
     <ImageView
         android:id="@+id/ivIcon"
-        android:layout_width="48dip"
-        android:layout_height="48dip"
+        android:layout_width="32dip"
+        android:layout_height="32dip"
         android:layout_marginRight="5dip"
+        android:layout_gravity="center"
         />
 
     <TextView
@@ -46,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="7dip"
+        android:layout_margin="5dip"
         />
 
     <ImageButton
@@ -54,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="7dip"
+        android:layout_margin="5dip"
         android:background="@drawable/ic_action_settings"
         />
 
@@ -63,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="7dip"
+        android:layout_margin="5dip"
         android:background="@drawable/ic_action_delete"
         />
 
