--- a/src/main/res/layout/actionbar.xml
+++ b/src/main/res/layout/actionbar.xml
@@ -20,25 +20,15 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   android:id="@+id/main_toolbar"
+                                   android:layout_height="wrap_content"
+                                   android:layout_width="match_parent"
+                                   android:minHeight="?attr/actionBarSize"
+                                   android:background="?attr/colorPrimary"
+                                   app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                                   app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     >
 
-    <include
-        layout="@layout/actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <fragment
-        android:id="@+id/login_frame"
-        android:name="com.nextgis.maplibui.NGWLoginFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_ngw_login"
-        />
-
-</LinearLayout>
+</android.support.v7.widget.Toolbar>
