--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -21,24 +21,17 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".SettingsActivity"
+              tools:actionBarNavMode="standard"
     >
 
     <include
         layout="@layout/actionbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-    <fragment
-        android:id="@+id/login_frame"
-        android:name="com.nextgis.maplibui.NGWLoginFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_ngw_login"
-        />
 
 </LinearLayout>
