Move some values to maplib

--- a/src/main/res/layout/fragment_ngw_login.xml
+++ b/src/main/res/layout/fragment_ngw_login.xml
@@ -94,6 +94,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_weight="0"
         android:enabled="false"
+        android:layout_margin="10dp"
         />
 
 </LinearLayout>
