--- a/src/main/res/layout/layout_layer_row.xml
+++ b/src/main/res/layout/layout_layer_row.xml
@@ -23,15 +23,16 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     >
 
     <ImageView
         android:id="@+id/ivIcon"
-        android:layout_width="24dip"
-        android:layout_height="24dip"
-        android:layout_marginRight="5dip"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginRight="5dp"
         android:layout_gravity="center"
         />
 
@@ -50,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dip"
+        android:layout_margin="5dp"
         />
 
     <ImageButton
@@ -58,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dip"
+        android:layout_margin="5dp"
         android:background="@drawable/ic_action_settings"
         />
 
@@ -67,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dip"
+        android:layout_margin="5dp"
         android:background="@drawable/ic_action_delete"
         />
 
