--- a/src/main/res/layout/layout_ngwlayer_check_row.xml
+++ b/src/main/res/layout/layout_ngwlayer_check_row.xml
@@ -21,7 +21,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/resourcegroup_row"
+              android:id="@+id/ngw_layer_check_row"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
               android:layout_height="?android:attr/listPreferredItemHeight">
@@ -36,7 +36,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
         >
         <TextView
             android:id="@+id/tvName"
@@ -45,9 +46,11 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:textStyle="bold"
             android:layout_margin="2dp"
+            android:singleLine="true"
+            android:maxLines="1"
             />
         <TextView
             android:id="@+id/tvDesc"
@@ -60,5 +63,31 @@
             android:layout_margin="2dp"
             />
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/raster"
+            android:id="@+id/type1"
+            android:layout_margin="2dp"
+            />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/checkBox1"
+            android:layout_weight="0"
+            />
+
+    </LinearLayout>
+
 
 </LinearLayout>
