--- a/src/main/res/layout/layout_create_tms.xml
+++ b/src/main/res/layout/layout_create_tms.xml
@@ -20,52 +20,82 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              tools:context="com.nextgis.maplibui.NGWLoginFragment">
+    >
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="5dp"
+        >
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/layer_name"
+        android:hint="@string/layer_name"
+        android:singleLine="true"
+        android:inputType="text"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/layer_url"
+        android:hint="@string/layer_url"
+        android:singleLine="false"
+        android:elegantTextHeight="false"
+        android:inputType="textUri"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/ngw_login_title"
-        android:id="@+id/textView"
-        android:layout_margin="5dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/layer_url_hint"
+        android:id="@+id/layer_url_hint"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/ngw_login_description"
-        android:id="@+id/textView2"
+        android:text="@string/layer_type_optional"
+        android:id="@+id/layer_type_summary"
+        android:background="@color/primary"
+        android:textColor="@android:color/primary_text_dark"
         android:layout_margin="5dp"
+        android:padding="2dp"
+        />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/layer_type"
+        android:prompt="@string/layer_type"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/credentials_opt"
+        android:id="@+id/auth_summary"
+        android:background="@color/primary"
+        android:textColor="@android:color/primary_text_dark"
+        android:layout_margin="5dp"
+        android:padding="2dp"
         />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/url"
-        android:autoLink="web"
-        android:autoText="false"
-        android:contentDescription="@string/ngw_url"
-        android:editable="true"
-        android:hint="@string/ngw_url"
-        android:inputType="textUri"
-        android:layout_margin="5dp"
-        />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
         android:id="@+id/login"
         android:hint="@string/login"
         android:inputType="textPersonName"
-        android:layout_margin="5dp"
         />
 
     <EditText
@@ -75,26 +105,7 @@
         android:ems="10"
         android:id="@+id/password"
         android:hint="@string/password"
-        android:layout_margin="5dp"
         />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:id="@+id/signin"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0"
-        android:enabled="false"
-        android:layout_margin="10dp"
-        />
-
-</LinearLayout>
+</ScrollView>
