--- a/src/main/res/layout/layout_layer_row.xml
+++ b/src/main/res/layout/layout_layer_row.xml
@@ -27,6 +27,7 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:descendantFocusability="blocksDescendants"
+    android:gravity="center_vertical"
     >
 
     <ImageView
@@ -35,16 +36,19 @@
         android:layout_height="30dp"
         android:layout_marginRight="2dp"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         />
 
     <TextView
         android:id="@+id/tvLayerName"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:ellipsize="marquee"
+        android:ellipsize="end"
+        android:maxLines="2"
         />
 
     <ImageButton
