--- a/src/main/res/xml/authenticator.xml
+++ b/src/main/res/xml/authenticator.xml
@@ -21,7 +21,7 @@
   -->
 
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-                       android:accountType="nextgis.com"
+                       android:accountType="com.nextgis.account"
                        android:icon="@drawable/ic_ngw"
                        android:smallIcon="@drawable/ic_ngw"
                        android:label="@string/nextgis_web">
