Add set/change attributes dialog

--- a/src/main/res/layout/activity_standard_attributes.xml
+++ b/src/main/res/layout/activity_standard_attributes.xml
@@ -21,6 +21,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/root_view"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -31,11 +32,18 @@
         android:layout_height="wrap_content"/>
 
     <LinearLayout
+        android:id="@+id/location_panel"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="vertical"
+        >
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:id="@+id/controls_list"
         >
 
     <TableLayout
@@ -116,5 +124,19 @@
         android:layout_margin="2dp"
         />
 
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        >
+        <LinearLayout
+            android:id="@+id/controls_list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
+
+    </ScrollView>
 
 </LinearLayout>
