--- a/src/main/res/layout/activity_ngw_login.xml
+++ b/src/main/res/layout/activity_ngw_login.xml
@@ -32,11 +32,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <fragment
+    <FrameLayout
         android:id="@+id/login_frame"
-        android:name="com.nextgis.maplibui.NGWLoginFragment"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_width="match_parent"
         tools:layout="@layout/fragment_ngw_login"
         />
 
