--- a/src/main/res/layout/layout_resource_radio_row.xml
+++ b/src/main/res/layout/layout_resource_radio_row.xml
@@ -20,9 +20,8 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/resource_check_row"
+              android:id="@+id/resource_radio_row"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
               android:layout_height="?android:attr/listPreferredItemHeight">
@@ -63,6 +62,25 @@
             android:ellipsize="marquee"
             android:layout_margin="2dp"
             />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_margin="5dp"
+        android:gravity="center"
+        >
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radio"
+            android:layout_weight="0"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            />
+
     </LinearLayout>
 
 
