--- a/src/main/res/menu/menu_tracks.xml
+++ b/src/main/res/menu/menu_tracks.xml
@@ -2,9 +2,9 @@
 <!--
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
-  ~ Authors:  Stanislav Petriakov
+  ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2015 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
