Fix toolbar height in landscape

--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -30,8 +30,6 @@
     >
 
     <include
-        layout="@layout/actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        layout="@layout/actionbar"/>
 
 </LinearLayout>
