--- a/src/main/res/layout/actionbar.xml
+++ b/src/main/res/layout/actionbar.xml
@@ -23,7 +23,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:id="@+id/main_toolbar"
-                                   android:layout_height="wrap_content"
+                                   android:layout_height="?attr/actionBarSize"
                                    android:layout_width="match_parent"
                                    android:minHeight="?attr/actionBarSize"
                                    android:background="?attr/colorPrimary"
