--- a/src/main/res/layout/activity_ngw_login.xml
+++ b/src/main/res/layout/activity_ngw_login.xml
@@ -28,9 +28,7 @@
     >
 
     <include
-        layout="@layout/actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        layout="@layout/actionbar"/>
 
     <FrameLayout
         android:id="@+id/login_frame"
