--- a/src/main/res/layout/bottombar.xml
+++ b/src/main/res/layout/bottombar.xml
@@ -20,31 +20,17 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.nextgis.maplibui.BottomToolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   android:id="@+id/bottom_toolbar"
+                                   android:layout_height="?attr/actionBarSize"
+                                   android:layout_width="match_parent"
+                                   android:minHeight="?attr/actionBarSize"
+                                   android:background="?attr/colorPrimary"
+                                   app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                                   app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                                   android:layout_gravity="bottom"
+                                   android:layout_alignParentBottom="true"
     >
-    <item
-        android:id="@+id/menu_edit_add_new_point"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_add_point"
-        android:title="@string/add_point"
-        />
-    <item
-        android:id="@+id/menu_edit_delete_point"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_delete_point"
-        android:title="@string/delete_point"
-        />
-    <item
-        android:id="@+id/menu_edit_move_point_to_current_location"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_move_point_to_location"
-        android:title="@string/move_point_to_current_location"
-        />
-    <item
-        android:id="@+id/menu_edit_attributes"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_action_attributes"
-        android:title="@string/edit_attributes"
-        />
-</menu>
+
+</com.nextgis.maplibui.BottomToolbar>
