--- a/src/main/res/menu/edit_line.xml
+++ b/src/main/res/menu/edit_line.xml
@@ -24,28 +24,16 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/menu_edit_apply"
-        app:showAsAction="always|withText"
-        android:icon="@drawable/ic_action_apply"
-        android:title="@string/apply"
+        android:id="@+id/menu_edit_add_new_line"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_add_line"
+        android:title="@string/add_line"
         />
     <item
-        android:id="@+id/menu_edit_add_new_nultipoint"
+        android:id="@+id/menu_edit_delete_line"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_add_points"
-        android:title="@string/add_multipoint"
-        />
-    <item
-        android:id="@+id/menu_edit_add_new_point"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_add_point"
-        android:title="@string/add_point"
-        />
-    <item
-        android:id="@+id/menu_edit_delete_multipoint"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_delete_points"
-        android:title="@string/delete_multipoint"
+        android:icon="@drawable/ic_action_delete_line"
+        android:title="@string/delete_line"
         />
     <item
         android:id="@+id/menu_edit_delete_point"
@@ -54,14 +42,20 @@
         android:title="@string/delete_point"
         />
     <item
+        android:id="@+id/menu_edit_track"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_maps_directions_walk"
+        android:title="@string/write_track"
+        />
+    <item
         android:id="@+id/menu_edit_move_point_to_current_location"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_move_point_to_location"
         android:title="@string/move_point_to_current_location"
         />
     <item
         android:id="@+id/menu_edit_attributes"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_attributes"
         android:title="@string/edit_attributes"
         />
