--- a/src/main/res/menu/edit_multipoint.xml
+++ b/src/main/res/menu/edit_multipoint.xml
@@ -24,12 +24,6 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/menu_edit_apply"
-        app:showAsAction="always|withText"
-        android:icon="@drawable/ic_action_apply"
-        android:title="@string/apply"
-        />
-    <item
         android:id="@+id/menu_edit_add_new_multipoint"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_add_points"
@@ -43,25 +37,25 @@
         />
     <item
         android:id="@+id/menu_edit_delete_multipoint"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_delete_points"
         android:title="@string/delete_multipoint"
         />
     <item
         android:id="@+id/menu_edit_delete_point"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_delete_point"
         android:title="@string/delete_point"
         />
     <item
         android:id="@+id/menu_edit_move_point_to_current_location"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_move_point_to_location"
         android:title="@string/move_point_to_current_location"
         />
     <item
         android:id="@+id/menu_edit_attributes"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_attributes"
         android:title="@string/edit_attributes"
         />
