--- a/src/main/res/menu/edit_line.xml
+++ b/src/main/res/menu/edit_line.xml
@@ -37,7 +37,7 @@
         />
     <item
         android:id="@+id/menu_edit_delete_point"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_delete_point"
         android:title="@string/delete_point"
         />
