--- a/src/main/res/menu/edit_multipolygon.xml
+++ b/src/main/res/menu/edit_multipolygon.xml
@@ -24,38 +24,62 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/menu_edit_add_new_nultipoint"
+        android:id="@+id/menu_edit_add_new_multipolygon"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_add_points"
-        android:title="@string/add_multipoint"
+        android:icon="@drawable/ic_action_add_multipolygon"
+        android:title="@string/add_multipolygon"
         />
     <item
-        android:id="@+id/menu_edit_add_new_point"
+        android:id="@+id/menu_edit_add_new_polygon"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_add_point"
-        android:title="@string/add_point"
+        android:icon="@drawable/ic_action_add_polygon"
+        android:title="@string/add_polygon"
         />
     <item
-        android:id="@+id/menu_edit_delete_multipoint"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_action_delete_points"
-        android:title="@string/delete_multipoint"
+        android:id="@+id/menu_edit_add_new_inner_ring"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_add_hole"
+        android:title="@string/add_hole"
+        />
+    <item
+        android:id="@+id/menu_edit_delete_multipolygon"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_delete_multipolygon"
+        android:title="@string/delete_multipolygon"
+        />
+    <item
+        android:id="@+id/menu_edit_delete_polygon"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_delete_polygon"
+        android:title="@string/delete_polygon"
+        />
+    <item
+        android:id="@+id/menu_edit_delete_inner_ring"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_delete_hole"
+        android:title="@string/delete_hole"
         />
     <item
         android:id="@+id/menu_edit_delete_point"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_delete_point"
         android:title="@string/delete_point"
         />
     <item
+        android:id="@+id/menu_edit_track"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_maps_directions_walk"
+        android:title="@string/write_track"
+        />
+    <item
         android:id="@+id/menu_edit_move_point_to_current_location"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_move_point_to_location"
         android:title="@string/move_point_to_current_location"
         />
     <item
         android:id="@+id/menu_edit_attributes"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_attributes"
         android:title="@string/edit_attributes"
         />
