Add popup menu to drawer layers

--- a/src/main/res/layout/layout_layer_row.xml
+++ b/src/main/res/layout/layout_layer_row.xml
@@ -4,6 +4,7 @@
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
+  ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
   ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
   ~
@@ -23,6 +24,7 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
@@ -35,14 +37,16 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        tools:ignore="ContentDescription"
         />
 
     <TextView
         android:id="@+id/tvLayerName"
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center_vertical"
@@ -57,24 +61,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="5dp"
+        tools:ignore="ContentDescription"
         />
 
     <ImageButton
-        android:id="@+id/btSettings"
+        android:id="@+id/btMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-        android:background="@drawable/ic_action_settings"
-        />
-
-    <ImageButton
-        android:id="@+id/btDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:background="@drawable/ic_action_delete"
+        android:background="@null"
+        android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
+        android:tint="@color/primary_dark_material_light"
+        tools:ignore="ContentDescription"
         />
 
 </LinearLayout>
