--- a/src/main/res/menu/layer_popup.xml
+++ b/src/main/res/menu/layer_popup.xml
@@ -33,6 +33,7 @@
         android:id="@+id/menu_share"
         android:title="@string/menu_share"
         android:orderInCategory="3"
+        android:visible="false"
         />
 
     <item
