--- a/src/main/res/menu/edit_point.xml
+++ b/src/main/res/menu/edit_point.xml
@@ -36,6 +36,12 @@
         android:title="@string/delete_point"
         />
     <item
+        android:id="@+id/menu_edit_move_point_to_center"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_move_point_to_center"
+        android:title="@string/move_point_to_center"
+        />
+    <item
         android:id="@+id/menu_edit_move_point_to_current_location"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_move_point_to_location"
