--- a/src/main/res/menu/edit_multipolygon.xml
+++ b/src/main/res/menu/edit_multipolygon.xml
@@ -24,6 +24,11 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
+        android:id="@+id/menu_cancel"
+        android:title="@string/cancel"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_cancel"/>
+    <item
         android:id="@+id/menu_edit_add_new_multipolygon"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_add_multipolygon"
@@ -31,7 +36,7 @@
         />
     <item
         android:id="@+id/menu_edit_add_new_polygon"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_add_polygon"
         android:title="@string/add_polygon"
         />
