--- a/src/main/res/menu/edit_polygon.xml
+++ b/src/main/res/menu/edit_polygon.xml
@@ -24,6 +24,11 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
+        android:id="@+id/menu_cancel"
+        android:title="@string/cancel"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_cancel"/>
+    <item
         android:id="@+id/menu_edit_add_new_polygon"
         app:showAsAction="always"
         android:icon="@drawable/ic_action_add_polygon"
