--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -26,4 +26,21 @@
         <item name="android:background">@drawable/ic_spinner_calendar</item>
     </style>
 
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
+
+    <style name="NGDialog" parent="Base.Theme.AppCompat.Light.Dialog">
+        <item name="isLightTheme">true</item>
+        <item name="windowActionBarOverlay">false</item>
+        <!-- Action Mode -->
+        <item name="actionModeCutDrawable">@drawable/ic_action_content_cut</item>
+        <item name="actionModeCopyDrawable">@drawable/ic_action_content_copy</item>
+        <item name="actionModePasteDrawable">@drawable/ic_action_content_paste</item>
+        <item name="actionModeSelectAllDrawable">@drawable/ic_action_content_select_all</item>
+        <item name="actionModeShareDrawable">@drawable/ic_action_social_share</item>
+
+        <item name="android:panelBackground">@color/background_material_light</item>
+        <item name="panelBackground">@drawable/abc_menu_hardkey_panel_mtrl_mult</item>
+        <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_light</item>
+    </style>
+
 </resources>
