--- a/src/main/res/layout/layout_create_tms.xml
+++ b/src/main/res/layout/layout_create_tms.xml
@@ -94,7 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login"
-        android:hint="@string/login"
+        android:hint="@string/user_name"
         android:inputType="textPersonName"
         />
 
