--- a/src/main/res/layout/fragment_ngw_login.xml
+++ b/src/main/res/layout/fragment_ngw_login.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/ngw_login_title"
-        android:id="@+id/textView"
+        android:id="@+id/login_title"
         android:layout_margin="5dp"
         />
 
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/ngw_login_description"
-        android:id="@+id/textView2"
+        android:id="@+id/login_description"
         android:layout_margin="5dp"
         />
 
