--- a/src/main/res/menu/tracks.xml
+++ b/src/main/res/menu/tracks.xml
@@ -3,6 +3,7 @@
   ~ Project:  NextGIS Mobile
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
+  ~ Author:   Dmitry Baryshnikov, dmitry.baryshnikov@nextgis.com
   ~ ******************************************************************************
   ~ Copyright (c) 2015 NextGIS, info@nextgis.com
   ~
@@ -24,38 +25,33 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_select_all"
-        android:title="@string/menu_select_all"
-        android:orderInCategory="0"
-        app:showAsAction="always"
-        android:icon="@drawable/abc_ic_menu_selectall_mtrl_alpha"/>
-
-    <!--<item-->
-        <!--android:id="@+id/menu_share"-->
-        <!--android:title="@string/menu_share"-->
-        <!--android:orderInCategory="1"-->
-        <!--app:showAsAction="always"-->
-        <!--android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"/>-->
-
-    <item
         android:id="@+id/menu_visibility_on"
         android:title="@string/menu_visibility_on"
-        android:orderInCategory="2"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_visibility_white_24dp"/>
+        android:icon="@drawable/ic_action_visibility_on"/>
 
     <item
         android:id="@+id/menu_visibility_off"
         android:title="@string/menu_visibility_off"
-        android:orderInCategory="3"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_visibility_off_white_24dp"/>
+        android:icon="@drawable/ic_action_visibility_off"/>
+
+    <!--<item-->
+    <!--android:id="@+id/menu_share"-->
+    <!--android:title="@string/menu_share"-->
+    <!--app:showAsAction="always"-->
+    <!--android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"/>-->
 
     <item
         android:id="@+id/menu_delete"
         android:title="@string/menu_delete"
-        android:orderInCategory="4"
-        app:showAsAction="never"
-        android:icon="@drawable/ic_action_delete_light"/>
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_delete"/>
+
+    <item
+        android:id="@+id/menu_select_all"
+        android:title="@string/menu_select_all"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_content_select_all"/>
 
 </menu>
