--- a/src/main/res/xml/preferences_empty.xml
+++ b/src/main/res/xml/preferences_empty.xml
@@ -20,6 +20,6 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen>
 
 </PreferenceScreen>
