--- a/src/main/res/layout/activity_standard_attributes.xml
+++ b/src/main/res/layout/activity_standard_attributes.xml
@@ -24,7 +24,8 @@
               android:id="@+id/root_view"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    >
 
     <include
         layout="@layout/actionbar"/>
@@ -37,90 +38,90 @@
         android:orientation="vertical"
         >
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        >
-
-    <TableLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:stretchColumns="0,1,2"
-        android:layout_weight="1"
-        >
-
-        <TableRow
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
             >
 
-            <TextView
-                android:id="@+id/latitude_view"
-                android:layout_gravity="start"
+            <TableLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="#ff000000"
-                />
+                android:stretchColumns="0,1,2"
+                android:layout_weight="1"
+                >
 
-            <TextView
-                android:id="@+id/longitude_view"
-                android:layout_gravity="start"
-                android:layout_height="wrap_content"
+                <TableRow
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    >
+
+                    <TextView
+                        android:id="@+id/latitude_view"
+                        android:layout_gravity="start"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#ff000000"
+                        />
+
+                    <TextView
+                        android:id="@+id/longitude_view"
+                        android:layout_gravity="start"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#ff000000"
+                        />
+
+                </TableRow>
+
+                <TableRow
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    >
+
+                    <TextView
+                        android:id="@+id/altitude_view"
+                        android:layout_gravity="start"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#ff000000"
+                        />
+
+                    <TextView
+                        android:id="@+id/accuracy_view"
+                        android:layout_gravity="start"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textColor="#ff000000"
+                        />
+
+                </TableRow>
+
+            </TableLayout>
+
+            <ImageButton
                 android:layout_width="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="#ff000000"
+                android:layout_height="wrap_content"
+                android:id="@+id/refresh"
+                android:background="@drawable/ic_action_refresh"
+                android:layout_margin="5dp"
                 />
 
-        </TableRow>
 
-        <TableRow
-            android:layout_height="wrap_content"
+        </LinearLayout>
+
+        <View
+            android:layout_height="1dp"
             android:layout_width="wrap_content"
-            >
-
-            <TextView
-                android:id="@+id/altitude_view"
-                android:layout_gravity="start"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="#ff000000"
-                />
-
-            <TextView
-                android:id="@+id/accuracy_view"
-                android:layout_gravity="start"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="#ff000000"
-                />
-
-        </TableRow>
-
-    </TableLayout>
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/refresh"
-            android:background="@drawable/ic_action_refresh"
-            android:layout_margin="5dp"
+            android:background="@android:color/darker_gray"
+            android:layout_margin="2dp"
             />
-
-
-    </LinearLayout>
-
-    <View
-        android:layout_height="1dp"
-        android:layout_width="wrap_content"
-        android:background="@android:color/darker_gray"
-        android:layout_margin="2dp"
-        />
 
     </LinearLayout>
 
@@ -129,11 +130,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         >
+
         <LinearLayout
             android:id="@+id/controls_list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            />
 
     </ScrollView>
 
