--- a/src/main/res/layout/activity_vectorlayer_settings.xml
+++ b/src/main/res/layout/activity_vectorlayer_settings.xml
@@ -23,7 +23,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    >
 
     <include
         layout="@layout/actionbar"
@@ -70,6 +71,6 @@
         />
 
     <include
-        layout="@layout/layout_color_row" />
+        layout="@layout/layout_color_row"/>
 
 </LinearLayout>
