--- a/src/main/res/layout/layout_datetimepicker.xml
+++ b/src/main/res/layout/layout_datetimepicker.xml
@@ -21,8 +21,8 @@
   -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
     >
 
     <LinearLayout
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         >
+
         <DatePicker
             android:id="@+id/datePicker"
             android:layout_width="wrap_content"
@@ -43,7 +44,8 @@
         <TimePicker
             android:id="@+id/timePicker"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            >
         </TimePicker>
     </LinearLayout>
 
