--- a/src/main/res/layout/layout_empty_row.xml
+++ b/src/main/res/layout/layout_empty_row.xml
@@ -24,6 +24,7 @@
               android:id="@+id/empty_row"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    >
 
 </LinearLayout>
