--- a/src/main/res/layout/layout_ngwlayer_doublecheck_row.xml
+++ b/src/main/res/layout/layout_ngwlayer_doublecheck_row.xml
@@ -24,7 +24,9 @@
               android:id="@+id/ngw_layer_doublecheck_row"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
-              android:layout_height="?android:attr/listPreferredItemHeight">
+              android:layout_height="?android:attr/listPreferredItemHeight"
+    >
+
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="32dp"
@@ -39,6 +41,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         >
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
@@ -51,7 +54,8 @@
             android:layout_margin="2dp"
             android:singleLine="true"
             android:maxLines="1"
-        />
+            />
+
         <TextView
             android:id="@+id/tvDesc"
             android:layout_width="wrap_content"
