--- a/src/main/res/layout/layout_resourcegroup_row.xml
+++ b/src/main/res/layout/layout_resourcegroup_row.xml
@@ -24,7 +24,9 @@
               android:id="@+id/resourcegroup_row"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
-              android:layout_height="?android:attr/listPreferredItemHeight">
+              android:layout_height="?android:attr/listPreferredItemHeight"
+    >
+
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="32dp"
@@ -38,6 +40,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         >
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
@@ -49,6 +52,7 @@
             android:textStyle="bold"
             android:layout_margin="2dp"
             />
+
         <TextView
             android:id="@+id/tvDesc"
             android:layout_width="wrap_content"
