--- a/src/main/res/layout/layout_select_layer_row.xml
+++ b/src/main/res/layout/layout_select_layer_row.xml
@@ -25,7 +25,9 @@
               android:id="@+id/resource_check_row"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
-              android:layout_height="?android:attr/listPreferredItemHeight">
+              android:layout_height="?android:attr/listPreferredItemHeight"
+    >
+
     <ImageView
         android:id="@+id/ivIcon"
         android:layout_width="32dp"
@@ -40,6 +42,7 @@
         android:layout_height="fill_parent"
         android:layout_weight="1"
         >
+
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
@@ -53,6 +56,7 @@
             android:singleLine="true"
             android:maxLines="1"
             />
+
         <TextView
             android:id="@+id/tvDesc"
             android:layout_width="wrap_content"
