--- a/src/main/res/menu/edit_by_walk.xml
+++ b/src/main/res/menu/edit_by_walk.xml
@@ -21,12 +21,14 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/menu_cancel"
         android:title="@string/cancel"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_cancel"/>
+        android:icon="@drawable/ic_action_cancel"
+        />
 
     <item
         android:id="@+id/menu_settings"
