--- a/src/main/res/menu/edit_line.xml
+++ b/src/main/res/menu/edit_line.xml
@@ -27,7 +27,8 @@
         android:id="@+id/menu_cancel"
         android:title="@string/cancel"
         app:showAsAction="always"
-        android:icon="@drawable/ic_action_cancel"/>
+        android:icon="@drawable/ic_action_cancel"
+        />
     <item
         android:id="@+id/menu_edit_add_new_line"
         app:showAsAction="always"
