--- a/src/main/res/values/arrays.xml
+++ b/src/main/res/values/arrays.xml
@@ -44,7 +44,8 @@
         <item>200 m</item>
         <item>300 m</item>
     </string-array>
-    <string-array name="tracker_min_dist_update_val"  translatable="false">
+    <string-array name="tracker_min_dist_update_val"
+                  translatable="false">
         <item>0</item>
         <item>1</item>
         <item>5</item>
@@ -74,7 +75,8 @@
         <item>30 min</item>
         <item>45 min</item>
     </string-array>
-    <string-array name="tracker_min_time_between_updates_val"  translatable="false">
+    <string-array name="tracker_min_time_between_updates_val"
+                  translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
@@ -96,7 +98,8 @@
         <item>Show marker only</item>
         <item>Show marker and accuracy radius</item>
     </string-array>
-    <string-array name="current_location_mode_val"  translatable="false">
+    <string-array name="current_location_mode_val"
+                  translatable="false">
         <item>0</item>
         <item>1</item>
         <item>3</item>
@@ -107,7 +110,8 @@
         <item>2 screens (recommended)</item>
         <item>3 screens</item>
     </string-array>
-    <string-array name="tms_tile_cache_size_val"  translatable="false">
+    <string-array name="tms_tile_cache_size_val"
+                  translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
