--- a/src/main/res/layout/activity_settings.xml
+++ b/src/main/res/layout/activity_settings.xml
@@ -25,7 +25,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              tools:context=".SettingsActivity"
+              tools:context=".activity.SettingsActivity"
               tools:actionBarNavMode="standard"
     >
 
