--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -23,9 +23,23 @@
   -->
 
 <resources>
-    <color name="actionBarColor">#8003a9f4</color>
-    <color name="primary">#03a9f4</color>
-    <color name="primary_dark">#01579b</color>
-    <color name="accent">#03a9f4</color>
+    <!-- Light -->
+    <color name="actionBarColor.Light">#8003a9f4</color>
+    <color name="primary.Light">#03a9f4</color>
+    <color name="primary_dark.Light">#01579b</color>
+    <color name="accent.Light">#03a9f4</color>
+    <color name="tabsScrollColor.Light">#4db6ac</color>
+    <color name="textColorPrimary.Light">#ffffff</color>
+    <color name="textColor.Light">#000000</color>
+    <color name="textColorSecondary.Light">#e0e0e0</color>
+    <!-- Dark -->
+    <color name="actionBarColor.Dark">#8003a9f4</color>
+    <color name="primary.Dark">#03a9f4</color>
+    <color name="primary_dark.Dark">#01579b</color>
+    <color name="accent.Dark">#03a9f4</color>
+    <color name="tabsScrollColor.Dark">#4db6ac</color>
+    <color name="textColorPrimary.Dark">#ffffff</color>
+    <color name="textColor.Dark">#ffffff</color>
+    <color name="textColorSecondary.Dark">#616161</color>
     <!--indigo from http://www.google.co.uk/design/spec/style/color.html#color-color-palette -->
 </resources>
