--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -24,15 +24,40 @@
 
 <resources>
 
-    <attr name="DatePickSpinnerStyle" format="reference"/>
+    <attr name="ThemeOverlay.NextGIS.Toolbar" format="reference"/>
+    <attr name="ThemeOverlay.NextGIS.ToolbarPopup" format="reference"/>
 
-    <style name="DatePickSpinner"
-           parent="Base.Widget.AppCompat.Spinner">
-        <item name="@attr/DatePickSpinnerStyle">@style/DatePickSpinner</item>
-        <item name="android:background">@drawable/ic_spinner_calendar</item>
+    <style name="Theme.NextGIS.AppCompat.Light"
+           parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/primary.Light</item>
+        <item name="colorPrimaryDark">@color/primary_dark.Light</item>
+        <item name="colorAccent">@color/accent.Light</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary.Light</item>
+        <item name="android:textColor">@color/textColor.Light</item>
+        <item name="android:textColorSecondary">@color/textColorSecondary.Light</item>
+        <item name="undoBarStyle">@style/UndoBarMaterialStyle</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="windowActionModeOverlay">false</item>
+        <item name="ThemeOverlay.NextGIS.Toolbar">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="ThemeOverlay.NextGIS.ToolbarPopup">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
-    <style name="NGDialog"
+    <style name="Theme.NextGIS.AppCompat.Dark"
+           parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/primary.Dark</item>
+        <item name="colorPrimaryDark">@color/primary_dark.Dark</item>
+        <item name="colorAccent">@color/accent.Dark</item>
+        <item name="undoBarStyle">@style/UndoBarMaterialStyle</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary.Dark</item>
+        <item name="android:textColor">@color/textColor.Dark</item>
+        <item name="android:textColorSecondary">@color/textColorSecondary.Dark</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="windowActionModeOverlay">false</item>
+        <item name="ThemeOverlay.NextGIS.Toolbar">@style/ThemeOverlay.AppCompat.ActionBar</item>
+        <item name="ThemeOverlay.NextGIS.ToolbarPopup">@style/ThemeOverlay.AppCompat</item>
+    </style>
+
+    <style name="Theme.NextGIS.AppCompat.Light.Dialog"
            parent="Base.Theme.AppCompat.Light.Dialog">
         <item name="isLightTheme">true</item>
         <item name="windowActionBarOverlay">false</item>
@@ -47,6 +72,14 @@
         <item name="android:panelBackground">@color/background_material_light</item>
         <item name="panelBackground">@drawable/abc_menu_hardkey_panel_mtrl_mult</item>
         <item name="listChoiceBackgroundIndicator">@drawable/abc_list_selector_holo_light</item>
+    </style>
+
+    <attr name="DatePickSpinnerStyle" format="reference"/>
+
+    <style name="DatePickSpinner"
+           parent="Base.Widget.AppCompat.Spinner">
+        <item name="@attr/DatePickSpinnerStyle">@style/DatePickSpinner</item>
+        <item name="android:background">@drawable/ic_spinner_calendar</item>
     </style>
 
 </resources>
